// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Component emits debounce changes 1`] = `
<div class="flex items-center w-full rounded-sm outline-none space-x-2 p-1 focus-within:border-vanilla-400 border border-solid border-ink-100 bg-ink-400 text-vanilla-300 h-10 py-2 text-base space-x-2 leading-8 py-2 px-4"> <input aria-label="" type="text" placeholder="captain@marvel.com" class="overflow-ellipsis overflow-hidden w-full caret-juniper flex flex-grow outline-none bg-transparent">
  <!---->
</div>
`;

exports[`Input Component renders a disabled input 1`] = `
<div class="flex items-center w-full rounded-sm outline-none space-x-2 p-1 focus-within:border-vanilla-400 border border-solid border-ink-100 bg-ink-400 text-slate cursor-not-allowed h-10 py-2 text-base space-x-2 leading-8 py-2 px-4"> <input aria-label="" type="text" placeholder="Enter a value" disabled="disabled" class="overflow-ellipsis overflow-hidden w-full caret-juniper flex flex-grow outline-none bg-transparent cursor-not-allowed">
  <!---->
</div>
`;

exports[`Input Component renders an input with clearable 1`] = `
<div class="flex items-center w-full rounded-sm outline-none space-x-2 p-1 focus-within:border-vanilla-400 border border-solid border-ink-100 bg-ink-400 text-vanilla-300 h-10 py-2 text-base space-x-2 leading-8 py-2 px-4"> <input aria-label="" type="text" placeholder="Enter a value" class="overflow-ellipsis overflow-hidden w-full caret-juniper flex flex-grow outline-none bg-transparent"> <svg viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round" fill="none" class="cursor-pointer z-icon w-4 h-4 z-icon--x text-vanilla-400">
    <line x1="18" y1="6" x2="6" y2="18"></line>
    <line x1="6" y1="6" x2="18" y2="18"></line>
  </svg></div>
`;

exports[`Input Component renders the default input component 1`] = `
<div class="flex items-center w-full rounded-sm outline-none space-x-2 p-1 focus-within:border-vanilla-400 border border-solid border-ink-100 bg-ink-400 text-vanilla-300 h-10 py-2 text-base space-x-2 leading-8 py-2 px-4"> <input aria-label="" type="text" placeholder="Enter a value" class="overflow-ellipsis overflow-hidden w-full caret-juniper flex flex-grow outline-none bg-transparent">
  <!---->
</div>
`;

exports[`Input Component renders the input with custom placeholder 1`] = `
<div class="flex items-center w-full rounded-sm outline-none space-x-2 p-1 focus-within:border-vanilla-400 border border-solid border-ink-100 bg-ink-400 text-vanilla-300 h-10 py-2 text-base space-x-2 leading-8 py-2 px-4"> <input aria-label="" type="text" placeholder="captain@marvel.com" class="overflow-ellipsis overflow-hidden w-full caret-juniper flex flex-grow outline-none bg-transparent">
  <!---->
</div>
`;
